# non-grid-wave-function-collapse

./: .gitignore  Cargo.toml  README.md  bsconfig.json  index.html  package-lock.json  package.json
cli/: Cargo.toml  config.json
cli/src/: main.rs
engine/: Cargo.toml
engine/src/: config.rs  fish_disk_points.rs  lib.rs  point_set.rs
src/: App.js
src/components/: Config.js  Rules.js
src/engine/: Main.re  Math.re
src/js/: index.js  util.js
src/js/components/: App.js
src/js/components/ConfigureModel/: ColorConfig.js  index.js
src/js/components/GenerateRules/: index.js
src/rust/: Cargo.toml
src/rust/src/: lib.rs
static/: index.html
web_interface/: Cargo.toml
