[package]
name = "rust"
version = "0.1.0"
authors = ["Freddie Ridell <contact@freddieridell.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.25"
serde = "^1.0.59"
serde_derive = "^1.0.59"
serde_json = "1.0.40" 

[dependencies.rand]
version = "0.7.0"
features = ["small_rng"]

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'IdbDatabase',
  'IdbFactory',
  'IdbObjectStore',
  'IdbObjectStoreParameters',
  'IdbOpenDbRequest',
  'IdbRequest',
  'IdbRequestReadyState',
  'Node',
  'Storage',
  'Window',
]
